<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.MainActivity">

    <LinearLayout
        android:id="@+id/layout_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_search_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_query_term"
            android:layout_margin="8dp" />

        <LinearLayout
            android:id="@+id/layout_dates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_begindate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/texteview_begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginDate" />

                <TextView
                    android:id="@+id/begin_date"
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:tag="begin" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_enddate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/endDate" />

                <TextView
                    android:id="@+id/end_date"
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:tag="begin" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_checkboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/first_checkboxes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_arts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_arts"/>
                <CheckBox
                    android:id="@+id/checkbox_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_business"/>
                <CheckBox
                    android:id="@+id/checkbox_entrepreneurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_entrepreneurs"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_checkboxes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_politics"/>
                <CheckBox
                    android:id="@+id/checkbox_sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_sports"/>
                <CheckBox
                    android:id="@+id/checkbox_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_travel"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_search"
            android:background="@color/colorPrimary"
            android:textColor="@color/text_color"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/separator" />

        <LinearLayout
            android:id="@+id/layout_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/notifications_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="false"
                android:text="@string/notifications_switch" />
        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>