<resources>
    <string name="app_name">My News</string>
    <string name="tab_top_stories">TOP STORIES</string>
    <string name="tab_most_popular">MOST POPULAR</string>
    <string name="tab_science">SCIENCE</string>
    <string name="tab_technology">TECHNOLOGY</string>
    <string name="search_articles">Search Articles</string>
    <string name="notifications">Notifications</string>
    <string name="dateformat">%1$s/%2$s/%3$s</string>
    <string name="checkConnection">Check your Internet connection…</string>

    <!-- Menu strings -->
    <string name="action_notifications">Notifications</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>

    <!-- Strings used in options activity -->
    <string name="search_query_term">Search query term</string>
    <string name="beginDate">Begin Date</string>
    <string name="endDate">End Date</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_politics">Politics</string>
    <string name="checkbox_business">Business</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_entrepreneurs">Entrepreneurs</string>
    <string name="checkbox_travel">Travel</string>
    <string name="button_search">SEARCH</string>
    <string name="notifications_switch">Enable notifications (once per day)</string>
    <string name="alertDialogTitle">Information</string>
    <string name="alertDialogText">No result were found</string>
    <string name="enterKeyword">Please enter a keyword</string>
    <string name="verifyDates">Please verify dates</string>
    <string name="chooseCategory">Please choose at least one category</string>
    <string name="alertDialogButton">Back</string>
    <string name="urlPrefix">https://static01.nyt.com/</string>
    <string name="datesTexts">%1$s/%2$s/%3$d</string>
    <string name="notificationsFillTheFields">Please fill the fields</string>
    <string name="notificationsEnabled">Notifications are enabled</string>
    <string name="notificationsDisabled">Notifications are disabled</string>
    <string name="notifsResultFound">%1$d results are found corresponding your criteria</string>
    <string name="notifsNoResultFound">No result found</string>

    <!-- About Activity -->
    <string name="about_title">About</string>
    <string name="about_subject">Subject : &#160;</string>
    <string name="about_subject_desc">This application retrieve news from the New York Times, using their dedicated APIs. It was developed for an OpenClassrooms\' project.</string>
    <string name="about_dev">Developer : &#160;</string>
    <string name="about_developer">Rémy DALLAVALLE</string>
    <string name="about_github">Github : &#160;</string>
    <string name="about_github_adress">https://github.com/Neandril/MyNews</string>

    <!-- Help Activity -->
    <string name="help_title">Help</string>
    <string name="help_link">Link for help : &#160;</string>
    <string name="help_weblink">https://developer.nytimes.com/faq</string>
    <string name="help_tips_title">Some useful things you may consider when using this application</string>
    <string-array name="help_tips">
        <item>• When an article is read, it became highlightened.</item>
        <item>• Notifications are set around midday each days.</item>
        <item>• If you want to modify your notifications preferences, you do not have to disable it and enable it again : just leave the page (back button for example) is enough.</item>
        <item>• On the search screen, if a date field isn\'t filled, the default date is today\'s.</item>
        <item>• Research queries needs to be comma-separated. Every spaces in the query are automatically replaced by a comma.</item>
    </string-array>

</resources>
