...
        android:layout_height="@dimen/about_logo"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_newyorktimes" />
    </LinearLayout>

...
